[package]
name = "mddf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
curl = "0.4.47"
dotenvy = "0.15.7"
fantoccini = "0.21.4"
image = "0.25.5"
jpeg-to-pdf = "0.2.3"
pdf-writer = "0.12.0"
reqwest = {version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = {version = "1.42.0", features = ["full"]}
